# Fractal

./: CMakeLists.txt  README.md
src/: burning.cpp  fractal.cpp  julia.cpp  main.cpp  mandel.cpp  tricorn.cpp
src/hpp/: burning.hpp  fractal.hpp  julia.hpp  mandel.hpp  tricorn.hpp
